--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ kotlin.code.style=official
 # but support is disabled because the following processors are not incremental:
 # androidx.room.RoomProcessor (DYNAMIC)
 kapt.incremental.apt=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
